--- a/style (2).css
+++ b/style (2).css
@@ -12,6 +12,10 @@ body {
 
 #container{
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    padding: 4rem;
+    gap: 3rem;
 }
 
 .cartao{
@@ -73,10 +77,6 @@ body {
 .cartao__conteudo__resposta{
     transform: ratateY(180deg);
 }
-
-
-
-
 
 footer{
     background-color: black;
